--- a/css/paper-wallet.css
+++ b/css/paper-wallet.css
@@ -51,7 +51,7 @@ h2:after {
 h3 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;	font-size: 22px;
 	font-weight: 600; 
-	color: #2793FF;
+	color: #0AC18E;
 	margin: 0;
 }
 
@@ -79,10 +79,10 @@ p {
 	width: 100%;
 	text-align: center;
 }
-
+/*
 a:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a), a:hover:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a), a:visited:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a) {
   cursor: pointer;
-	color: #2793FF;
+	color: #0AC18E;
 	font-weight: 700;
 }
 
@@ -99,18 +99,36 @@ a:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a), a:hover:not(#bitcoinc
 #bitcoincom-wgt-navbar a:hover {
 	text-decoration: none;
 	color: rgb(19, 23, 32);
-}
+} */
 
 .section-1 {
 	background-color: #111724;
 	background-repeat: no-repeat;
     background-size: cover;
+    background-image: url("../img/BitcoinCash_Banner2.jpeg");
     height: 400px;
     display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: center; 
 	background-attachment: fixed;
-	background-position: center;
+	background-position: top;
+}
+
+@media screen and (max-width:800px) {
+  .section-1 {
+    /* width: 100vw;
+	height: 100vh; width:100%;*/
+
+	/*background-size: cover;
+	background-position: center, center;
+	background-color: #111724; 
+	background-image: url("../img/BitcoinCash_Banner2.jpeg"); */
+	background-color: black;
+	/* background-image: none; */
+	background-attachment: inherit;
+	background-position: inherit;
+	background-size: cover;
+	}
 }
 
 .section-1 h1 {
@@ -139,7 +157,7 @@ a:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a), a:hover:not(#bitcoinc
 	padding: 17px 38px;
 	font-size: 20px;
 	line-height: 22px;
-	background-color: #2793FF;
+	background-color: #0AC18E;
 	font-weight: 700;
   box-shadow: 0px 20px 87px rgba(45, 50, 59, 0.02),
     0px 10px 38px rgba(45, 50, 59, 0.03),
@@ -148,14 +166,14 @@ a:not(#bitcoincom-wgt-footer a, #bitcoincom-wgt-navbar a), a:hover:not(#bitcoinc
 }
 
 .btn-primary:hover {  
-	background-color: #2793FF;
+	background-color: #0AC18E;
   border:none;
   box-shadow: 0px 6px 6px rgba(0, 123, 255, 0.2),
 		0px 8px 10px rgba(0, 125, 255, 0.25);
 }
 .btn-primary:active {
 	border:none;
-	background-color: #2793FF;
+	background-color: #0AC18E;
   box-shadow: 0px 6px 6px rgba(0, 123, 255, 0.2),
     0px 8px 10px rgba(0, 125, 255, 0.25);
 }
@@ -191,8 +209,8 @@ svg.page-hero-shape {
 .section-security {
 	padding: 50px 0 50px 0;
 	background-color: #000;
-	border-top: 15px solid #2793FF;
-	border-bottom: 15px solid #2793FF;
+	border-top: 15px solid #0AC18E;
+	border-bottom: 15px solid #0AC18E;
 	background-color: #111724;
 }
 
@@ -439,7 +457,18 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAFCAYAAACXU8ZrAAAAN0lEQVQYV2
 }
 
 
+/* CUSTOM */
 
+.glow {
+  text-shadow: 2px 2px 5px black;
+  /* in order: x offset, y offset, blur size, spread size, color */
+  /* blur size and spread size are optional (they default to 0) */
 
+}
+
+.stroked {
+  /* color: white; */
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
 
 
