adding instructions for shasum and shasum file for zip file, and some minor css/html updates, moving security recommendations first

--- a/css/paper-wallet.css
+++ b/css/paper-wallet.css
@@ -234,7 +234,8 @@ svg.page-hero-shape {
 	color: #0fcb97;
 	font-size: 18px;
 	font-weight: 600;
-	margin-left: 30px;
+	margin-left: 0px;
+	margin-bottom:10px;
 	display: inline-block;
 }
 
